project content height fixed on narrow mobile devices

--- a/src/styles/components/_project-card.scss
+++ b/src/styles/components/_project-card.scss
@@ -110,7 +110,6 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			height: 100%;
 			z-index: 1;
 			margin-left: -6%;
 			box-sizing: border-box;
